fix: path to favicon img

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
-    <link rel="shortcut icon" type="image/png" href="/logo.png" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="https://chit-chat-ai-1.vercel.app/logo.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChitChat</title>
   </head>
